--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -55,7 +55,7 @@
                             {% endif %}
                         {% endif %}
                         {% if entry.message is defined and entry.message is not null %}
-                            <div class="tooltip">{{ entry.message|raw }}</div>
+                            <div class="tooltip normal">{{ entry.message|raw }}</div>
                         {% elseif not entry.crossed %}
                             {% embed "ajax/game/item_tooltip.html.twig" with {"item": entry.item} %}{% endembed %}
                         {% endif %}
