Fix strong color in normal tooltip

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1365,7 +1365,7 @@ div.tooltip {
       border-bottom-color: white;
     }
     strong {
-      color: #a90017;
+      color: #ffaa88;
     }
   }
 
