There's no translation on hidden statuses

--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -54,7 +54,7 @@
                     {% for stat in status %}
                         {# @var stat \App\Entity\CitizenStatus #}
                         {% if stat.hidden %}
-                            {{ stat.name|trans({}, 'game') }}<br />
+                            {{ stat.name }}<br />
                         {% endif %}
                     {% endfor %}
                     </div>
