NO MORE SOCIAL DISTANCING

--- a/templates/ajax/game/map.html.twig
+++ b/templates/ajax/game/map.html.twig
@@ -156,7 +156,7 @@
                                         {% endif %}
                                         {% if zone_zombies > 0 %}
                                             {% for n in 1..zone_zombies %}
-                                                <div class="actor zombie" style="left: {{ random([random(15,35),random(75,95)]) }}%; top: {{ random([random(15,35),random(75,95)]) }}%"></div>
+                                                <div class="actor zombie" style="left: {{ random([random(15,95)]) }}%; top: {{ random([random(15,95)]) }}%"></div>
                                             {% endfor %}
                                         {% endif %}
                                     {% endif %}
