Add missing warning icon on the workshop page

--- a/templates/ajax/game/town/workshop.html.twig
+++ b/templates/ajax/game/town/workshop.html.twig
@@ -44,6 +44,7 @@
 
     {% if has_recipes %}
         <div class="note note-critical">
+            <img src="{{ asset('build/images/icons/small_warning.gif') }}" alt="" />
             {% trans from 'game' %}
                 Achte darauf, keine <strong>nutzlosen Ressourcen</strong> herzustellen! Wenn du dir nicht sicher bist, sieh in dem <strong>Forum</strong> hier unten nach...
             {% endtrans %}
