--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -167,7 +167,7 @@
         </div>
 
         <div class="row">
-            <h5>{{ 'Mein Register'|trans({},'game') }}</h5>
+            <h5>{{ 'Mein Register'|trans({},'game') }} <a class="float-right link" x-ajax-href="{{ path("game_newspaper") }}">{{ 'Das Gesamtregister ansehen'|trans({}, 'game') }}<div class="tooltip normal">{{ 'Dieser Link bringt dich zum <strong>Großen Register</strong>. Darin werden alle wichtigen Handlungen und Aktionen der Stadtbürger gespeichert...'|trans({}, 'game')|raw }}</div></a></h5>
             <div class="cell rw-12">
                 {% embed "ajax/game/log.html.twig" with {'log_content': log, 'log_source': path('town_house_log_controller') } %}
                 {% endembed %}
