--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -153,7 +153,7 @@
                             {% for item in citizen.home.chest.items %}
                                 {# @var \App\Entity\Item item #}
                                 {% if (citizen == me or not item.prototype.hideInForeignChest) %}
-                                    {% embed "ajax/game/item.html.twig" with {'item': item, 'no_tooltip': true, 'no_id': true} %}{% endembed %}
+                                    {% embed "ajax/game/item.html.twig" with {'item': item, 'no_id': true} %}{% endembed %}
                                 {% endif %}
                             {% endfor %}
                         </ul>
