--- a/templates/ajax/game/inventory.html.twig
+++ b/templates/ajax/game/inventory.html.twig
@@ -16,6 +16,9 @@
 <ul {% if bankmode is defined and bankmode %}id="bank-inventory"{% endif %} class="inventory {% block class %}{% endblock %}">
     {% if bankmode is not defined or not bankmode %}
         <li class="title">{% block title %}{% endblock %}</li>
+        {% if items|length == 0 and block('class') == "desert" %}
+            <li class="category inline-block"><em class="small">{{ 'Nichts Interessantes...'|trans({}, 'game') }}</em></li>
+        {% endif %}
         {% for item in ( sort is defined and sort ? items|sort((a,b) => b.essential <=> a.essential ?: b.prototype.sort <=> a.prototype.sort ?: a.prototype.id <=> b.prototype.id ) : items) %}
             {% if (not item.hidden or show_banished_hidden) and (not foreignChestMode or not item.prototype.hideInForeignChest) %}
                 {% embed "ajax/game/item.html.twig" with {'item': item, 'escort': escort} %}{% endembed %}
