Fix curtains in omniscience view

--- a/templates/ajax/game/town/citizen_omniscience.html.twig
+++ b/templates/ajax/game/town/citizen_omniscience.html.twig
@@ -69,7 +69,7 @@
                             {% endfor %}
                         </ul>
                     {% else %}
-                        <em>{{ 'Der Inhalt dieses Hauses wird durch Vorhänge an den Fenstern verdeckt...'|trans({},'game') }}</em>
+                        <span>--</span>
                     {% endif %}
 
                 </div>
