--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -118,7 +118,12 @@
                 
                 {% if buildable and building.ap < ((building.prototype.ap * workshopBonus)|round) %}
                     <div class="build-req">
-                        <div class="ap">{{ ((building.prototype.ap * workshopBonus)|round) - building.ap }}</div>
+                        <div class="ap">
+                            {{ ((building.prototype.ap * workshopBonus)|round) - building.ap }}
+                            <div class="tooltip help">
+                                {{ 'Zum Bau dieses Bauprojekts fehlen noch {ap} AP'|trans({'{ap}':((building.prototype.ap * workshopBonus)|round) - building.ap },"game") }}
+                            </div>
+                        </div>
                     </div>
                 {% elseif (building.complete and building.hp < building.prototype.hp) %}
                     <div class="build-req">
