--- a/templates/scripts/errors/profile.txt.twig
+++ b/templates/scripts/errors/profile.txt.twig
@@ -22,6 +22,7 @@
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorUserEditUserName') }}:  '{{'Du kannst deinen Spielernamen aktuell nicht ändern.'|trans({},'soul')|e('js')}}',
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorUserEditTooSoon') }}:  '{{'Dafür ist es zu früh!'|trans({},'soul')|e('js')}}',
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorUserUseEternalTwin') }}:  '{{'Bitte ändere deinen Anzeigenamen auf EternalTwin.'|trans({},'soul')|e('js')}}',
+{{ constant('App\\Controller\\Soul\\SoulController::ErrorUserConfirmToken') }}: '{{ 'Der Validierungs-Token ist ungültig.'|trans({}, 'soul')|e('js') }}',
 
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorCoalitionUserAlreadyMember') }}:  '{{'Es tut uns Leid, aber dieser Spieler gehört bereits einer Koalition an.'|trans({},'soul')|e('js')}}',
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorCoalitionNotSet') }}:  '{{'Hierfür musst du einer Koalition angehören.'|trans({},'soul')|e('js')}}',
