--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -378,10 +378,10 @@
                                 <label><input id="email_validation_token" type="text" placeholder="abcdef123456" /></label>
                             </div>
                             <div class="cell padded rw-6">
-                                <button id="resend_token">{{ 'Sende die Bestätigungsmail zurück'|trans({},'soul') }}</button>
+                                <button id="resend_token">{{ 'Validierung erneut senden'|trans({},'soul') }}</button>
                             </div>
                             <div class="cell padded rw-6">
-                                <button id="cancel_token">{{ 'Änderungsanfrage abbrechen'|trans({},'soul') }}</button>
+                                <button id="cancel_token">{{ 'Änderung der E-Mail Adresse abbrechen'|trans({},'soul') }}</button>
                             </div>
                         </div>
                     </div>
