--- a/templates/scripts/errors/generic.txt.twig
+++ b/templates/scripts/errors/generic.txt.twig
@@ -4,6 +4,7 @@
 {{ constant('App\\Service\\ErrorHelper::ErrorInternalError') }}    : '{{'Beim Ausführen der Aktion ist ein interner Fehler aufgetreten. Bitte versuche es später erneut.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorPermissionError') }}  : '{{'Dazu hast Du kein Recht.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorBannedFromForum') }}  : '{{'Du wurdest aus dem Forum verbannt.'|trans({},'global')|e('js')}}',
+{{ constant('App\\Service\\ErrorHelper::ErrorSendingEmail') }}  : '{{'E-Mail konnte nicht gesendet werden.'|trans({},'global')|e('js')}}',
 
 {{ constant('App\\Service\\ErrorHelper::ErrorNoAP') }}                     : '{{'Für diese Aktion hast du nicht genug AP.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorActionNotAvailable') }}       : '{{'Diese Aktion steht dir aktuell nicht zur Verfügung.'|trans({},'global')|e('js')}}',
