--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -16,6 +16,10 @@
 .pointer {cursor: pointer;}
 .no-ws { font-size: 0 }
 
+hr.dashed {
+	border: 1px dashed @myhordes-smalltext;
+}
+
 h5 {
   margin: 15px 0 2px;
   font-variant: small-caps; font-weight: bold; color: @myhordes-smalltext;
