--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -502,3 +502,8 @@ ul.coa-users {
   text-decoration: none !important;
   font-size: 120%; padding-top: 5px; color: #ddab76; font-weight: bold;
 }
+
+div.death-desc {
+    border-right: 1px solid @myhordes-smalltext;
+    padding-right: 5px;
+}
