Add OG language tags

--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -19,6 +19,10 @@
         <meta property="og:description" content="Das Zombie Survival Game!">
         <meta property="og:image" content="{{ asset('build/images/favicon.ico') }}">
         <meta property="og:url" content="{{ app.request.uri }}">
+        <meta property="og:locale" content="de_DE" />
+        <meta property="og:locale:alternate" content="fr_FR" />
+        <meta property="og:locale:alternate" content="es_ES" />
+        <meta property="og:locale:alternate" content="en_US" />
 
         <!-- Load CSS -->
         {{ encore_entry_link_tags('app') }}
