--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -307,8 +307,10 @@
                         {% endembed %}
                     </div>
                     {% if owner.zone and not protect %}
-                        <button x-action-id="enablesteal"><img src="{{asset('build/images/icons/home.gif')}}" alt="" /> {{'Einen Gegenstand stehlen'|trans({}, 'game')}}</button>
-                        {% if not owner.town.chaos  %}
+                        {% if chest.items|length > 0 or hidden %}
+                            <button x-action-id="enablesteal"><img src="{{asset('build/images/icons/home.gif')}}" alt="" /> {{'Einen Gegenstand stehlen'|trans({}, 'game')}}</button>
+                        {% endif %}
+                        {% if not owner.town.chaos %}
                             <button x-action-id="enablesneak">{{'Einen Gegenstand hinterlassen'|trans({}, 'game')}}</button>
                         {% endif %}
                     {% endif %}
